--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@clerk/nextjs": "^4.29.6",
+    "@convex-dev/auth": "^0.0.66",
     "@liveblocks/client": "^2.6.0",
     "@liveblocks/node": "^2.6.0",
     "@liveblocks/react": "^2.6.0",
